feat: 36-task sprint — 4 new tools + depth boost + security hardening
This commit is the consolidated output of a multi-sprint improvement
cycle. See conversation history / TaskList for the per-task breakdown.

NEW TOOLS (end-to-end: backend + tests + frontend + i18n × 11 + SDK + CLI):
  • DKIM Key Fetcher       — /api/v1/dkim/{domain}?selector=
  • CT Log Search          — /api/v1/ct-logs/{domain}
  • DoH / DoT Tester       — /api/v1/doh/{domain}?type=
  • WebSocket Probe        — /api/v1/websocket?url=&subprotocol=

DEPTH BOOST:
  • DnsController          — 13 new record types (SRV, PTR, TLSA, SVCB,
                             HTTPS, DS, DNSKEY, RRSIG, NSEC, NSEC3, CDS,
                             CDNSKEY), ?includeRrsig and ?dnssecSummary
                             flags, type-specific detailOf branches.
  • SslController          — per-cert KU + EKU + AIA (DER bytewalk),
                             signedByNext cryptographic verification,
                             chainComplete boolean, hasSctExtension.

SECURITY HARDENING:
  • TargetValidator        — IDN.toASCII normalisation closes Cyrillic
                             homograph bypass.
  • SecurityConfig         — per-endpoint Cache-Control policy
                             (private/max-age for idempotent lookups,
                             no-store for mutating + user-state).
  • CSP nonce              — middleware + lib/csp.ts drop 'unsafe-inline'
                             for script-src + style-src in prod.
  • Jackson 401/429 bodies — replace hand-concat with ObjectMapper
                             (RateLimitFilter, ApiKeyFilter).
  • ApiException.sanitizedFailure — correlation-ID error pattern adopted
                             by 11 controllers to hide raw e.getMessage()
                             from clients.
  • JWT clock skew         — 30s tolerance on exp + nbf check (RFC 7519).
  • next-auth pin          — ^5.0.0-beta.31 → 5.0.0-beta.31 exact.

PERFORMANCE:
  • BoundedDns    